colocando para o github pages

--- a/cad.html
+++ b/cad.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,10 +12,12 @@
         body {
             background-color: #f8f9fa;
         }
+
         .card {
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+
         .footer {
             position: absolute;
             bottom: 0;
@@ -24,6 +27,7 @@
         }
     </style>
 </head>
+
 <body>
     <div class="container mt-5">
         <h2 class="text-center mb-5">Cadastro de alunos</h2>
@@ -60,15 +64,15 @@
                         </div>
                         <form>
                             <div class="d-flex justify-content-center">
-                              <div>
-                                <div class="col-12 mt-4 text-center mb-3">
-                                  <button type="button" class="btn btn-primary mr-2">Cadastrar</button>
-                                  <button type="reset" class="btn btn-danger">Limpar</button>
+                                <div>
+                                    <div class="col-12 mt-4 text-center mb-3">
+                                        <button type="button" class="btn btn-primary mr-2">Cadastrar</button>
+                                        <button type="reset" class="btn btn-danger">Limpar</button>
+                                    </div>
                                 </div>
-                              </div>
                             </div>
-                          </form>
-                          
+                        </form>
+
                     </form>
                 </div>
             </div>
@@ -78,11 +82,13 @@
     <div class="footer bg-light">
         <div class="container">
             <img src="assets/img/Bootstrap_logo.svg.png" alt="Bootstrap Logo" height="70">
-            <p class="mt-2">&copy; 2024 Bootstrap - O melhor framework web. Todos os direitos reservados. Atualmente v5.3</p>
+            <p class="mt-2">&copy; 2024 Bootstrap - O melhor framework web. Todos os direitos reservados. Atualmente
+                v5.3</p>
             <a href="#" class="btn btn-link">Voltar a home</a>
             <p>Projeto Feito por Bruno Marinho Souza</p>
         </div>
     </div>
 
 </body>
+
 </html>
