colocando para o github pages

--- a/cad.html
+++ b/cad.html
@@ -81,7 +81,7 @@
 
     <div class="footer bg-light">
         <div class="container">
-            <img src="assets/img/Bootstrap_logo.svg.png" alt="Bootstrap Logo" height="70">
+            <img src="./assets/img/Bootstrap_logo.svg.png" alt="Bootstrap Logo" height="70">
             <p class="mt-2">&copy; 2024 Bootstrap - O melhor framework web. Todos os direitos reservados. Atualmente
                 v5.3</p>
             <a href="#" class="btn btn-link">Voltar a home</a>
