--- a/login.html
+++ b/login.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="assets/css/login.css" />
+  <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="./assets/css/login.css" />
   <title>Sistema Web com Bootstrap</title>
 </head>
 
@@ -19,7 +19,7 @@
       <div class="row">
         <!-- Logomarca -->
         <div class="col-12 text-center mb-5">
-          <a href="index.html"><img src="assets/img/logo_senac.jpg" alt="" /></a>
+          <a href="./index.html"><img src="./assets/img/logo_senac.jpg" alt="" /></a>
         </div>
 
         <!-- Título e Subtítulo -->
@@ -54,7 +54,7 @@
         <div class="col-12 text-center">
           <p>
             Ainda não tem conta?
-            <a href="cad.html" class="fw-bold text-info">Faça o seu cadastro!</a>
+            <a href="./cad.html" class="fw-bold text-info">Faça o seu cadastro!</a>
           </p>
         </div>
       </div>
